--- a/sass/game.scss
+++ b/sass/game.scss
@@ -17,6 +17,23 @@
   transform: translateX(-50%);
 }
 
+.blink {
+  -webkit-animation: blink 1.1s linear infinite;
+  animation: blink 1.1s linear infinite;
+}
+@-webkit-keyframes blink {
+  50% { color:rgb(34, 34, 34); }
+  51% { color: rgba(34, 34, 34, 0); }
+  100% { color: rgba(34, 34, 34, 0); }
+}
+@keyframes blink {
+  50% { color: rgb(34, 34, 34); }
+  51% { color: rgba(34, 34, 34, 0); }
+  100% { color: rgba(34, 34, 34, 0); }
+}
+
+
+
 .game__lives {
   position: absolute;
   top: 20px;
